crates/unsoundness_checker/tests/snapshots/rules/mutating_function_code_attribute/markdown_test__snippet_01.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[mutating-function-code-attribute]: Mutating `__code__` attribute on a function may lead to runtime type errors.
 --> What gets flagged.py:7:1
  |
5 |     return "!"
6 |
7 | foo.__code__ = bar.__code__
  | ^^^^^^^^^^^^
8 |
9 | # Type checker things `result` is an `int`, but it is a string
  |
info: rule `mutating-function-code-attribute` was selected in the configuration file
